--- a/images/desktop.ini
+++ b/images/desktop.ini
@@ -1,2 +1,5 @@
 [LocalizedFileNames]
 Plant_Disease_1.png=@Plant_Disease_1,0
+Bitcoin_1.png=@Bitcoin_1,0
+Brain_Tumour.png=@Brain_Tumour,0
+Bitcoin_2.png=@Bitcoin_2,0
